@@ -59,11 +59,15 @@ generated: $(tests_built_sources)
 #
 # the test programs:
 #
-TESTS = cxxbinding
+TESTS = cxxbinding perftest
 progs_ldadd = $(top_builddir)/bse/libbse.la $(top_builddir)/sfi/libsfi.la
 cxxbinding_SOURCES = cxxbinding.cc bsecxxapi.cc
 cxxbinding_LDADD = $(progs_ldadd)
 $(srcdir)/cxxbinding.cc: bsecxxapi.h
+
+perftest_SOURCES = perftest.cc bsecxxapi.cc
+perftest_LDADD = $(progs_ldadd)
+$(srcdir)/perftest.cc: bsecxxapi.h
 
 noinst_PROGRAMS = $(TESTS)
 
